# Cargo.toml

[package]
name = "operating-system-rust"
version = "0.1.0"
edition = "2021"

# (CPI) Custom Panic Implementation.
# - "abort" -> disable stack unwinding on panic
[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
# END of CPI

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# It doesn't build on newer versions.
[dependencies]
bootloader = "0.9.24"
volatile = "0.2.6"
spin = "0.9.8"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
